Bug 342137 - "<unknown> &name" label text in property dialog of tree view folder
Summary: "<unknown> &name" label text in property dialog of tree view folder
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.5
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-22 20:04 UTC by Ralf Habacker
Modified: 2014-12-22 20:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.1 (KDE 14.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-22 20:04:28 UTC
Opening the property dialog of a folder in the tree view shows "<unknown> &name" label text for the folder name edit field.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. double click on a tree view folder

Actual Results:  
The folder name field label contains the "<unknown &name" text. 

Expected Results:  
There should be displayed "Folder &name" instead.
Comment 1 Ralf Habacker 2014-12-22 20:52:30 UTC
Git commit 4173448d45c5daa6317a323430dc50f5c9272241 by Ralf Habacker.
Committed on 22/12/2014 at 20:25.
Pushed by habacker into branch 'Applications/14.12'.

Move code returning localization string of uml object type to class UMLObject.

Add new method UMLObject::toI18nString().

M  +1    -43   umbrello/dialogs/pages/classgeneralpage.cpp
M  +57   -0    umbrello/umlobject.cpp
M  +1    -0    umbrello/umlobject.h

http://commits.kde.org/umbrello/4173448d45c5daa6317a323430dc50f5c9272241
Comment 2 Ralf Habacker 2014-12-22 20:52:30 UTC
Git commit 789b3a365b2d1112cdb25e45df9724dcc7c592b2 by Ralf Habacker.
Committed on 22/12/2014 at 20:32.
Pushed by habacker into branch 'Applications/14.12'.

Add missing folder object type to UMLObject::toI18nString().
FIXED-IN:2.15.1 (KDE 14.12.1)

M  +3    -0    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/789b3a365b2d1112cdb25e45df9724dcc7c592b2