Add missing folder object type to UMLObject::toI18nString().

BUG:342137
FIXED-IN:2.15.1 (KDE 14.12.1)